--- a/FBLA-PROJECT-FINAL/CSS-Style-Sheets/adminlogin-style.css
+++ b/FBLA-PROJECT-FINAL/CSS-Style-Sheets/adminlogin-style.css
@@ -15,6 +15,11 @@ body {
   flex-direction: column;
 }
 
+html
+{
+  scroll-behavior: smooth;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -343,3 +348,4 @@ button:active {
     width: 90%;
   }
 }
+
