Refactor claim-style.css for improved structure

--- a/FBLA-PROJECT-FINAL/CSS-Style-Sheets/claim-style.css
+++ b/FBLA-PROJECT-FINAL/CSS-Style-Sheets/claim-style.css
@@ -16,6 +16,8 @@
 /* Firefox */
 html {
     scrollbar-width: none;
+    scroll-behavior: smooth;
+
 }
 /*------------------------*/
 
@@ -441,3 +443,4 @@ textarea {
         flex-direction: column;
     }
 }
+
