--- a/FBLA-PROJECT-FINAL/CSS-Style-Sheets/signup-style.css
+++ b/FBLA-PROJECT-FINAL/CSS-Style-Sheets/signup-style.css
@@ -13,6 +13,11 @@ body {
   min-height: 100vh;
 }
 
+html
+{
+  scroll-behavior: smooth;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -336,3 +341,4 @@ button:hover {
     font-size: 22px;
   }
 }
+
